fix(skills): wrong height on small screen

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -81,7 +81,7 @@ footer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: calc(100vw - 2 * 4rem);
-  height: calc(100vh - 2 * 4rem);
+  min-height: calc(100vh - 2 * 4rem);
   margin-bottom: 25vh;
   &:hover {
     & .skills__image {
